# bmp_to_jpg

./: CMakeLists.txt  README.md  bmp_to_jpg.cpp
